Fixed logo spacing and screen text length

--- a/public/main.css
+++ b/public/main.css
@@ -29,7 +29,7 @@
 img.logo {
   display: inline;
   max-width: 100px;
-  margin-inline: 1rem;
+  margin-left: 0.75rem;
 }
 
 body {
@@ -280,7 +280,10 @@ header {
 .header-screen p {
   font-family: "Fire Code", monospace;
   color: #f2f2f2;
-  padding: 0 1rem;
+  padding: 0 0.75rem;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 .header-screen p:nth-of-type(1) {
   color: #9BFA00;
@@ -571,6 +574,11 @@ p.tags {
   .header-col1 {
     bottom: 7rem;
   }
+  .header-screen p {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
   .header-screen p:nth-of-type(1) {
     font-size: 20px;
     font-size: 1.25rem;
@@ -672,6 +680,11 @@ p.tags {
   .header-col2 {
     display: inline;
   }
+  .header-screen p {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
   .header-screen p:nth-of-type(1) {
     font-size: 24px;
     font-size: 1.5rem;
@@ -730,6 +743,11 @@ p.tags {
     line-height: 1.5;
   }
   div.card {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+  .header-screen p {
     font-size: 16px;
     font-size: 1rem;
     line-height: 1.5;
