--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -58,7 +58,7 @@
 img.logo {
   display: inline;
   max-width: 100px;
-  margin-inline: 1rem;
+  margin-left: 0.75rem;
 }
 @media screen and (min-width: 480px) {
   img.logo {
@@ -346,7 +346,31 @@ header {
 .header-screen p {
   font-family: "Fire Code", monospace;
   color: #f2f2f2;
-  padding: 0 1rem;
+  padding: 0 0.75rem;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+@media screen and (min-width: 480px) {
+  .header-screen p {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+}
+@media screen and (min-width: 720px) {
+  .header-screen p {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header-screen p {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
 }
 .header-screen p:nth-of-type(1) {
   color: #9BFA00;
