--- a/src/assets/sass/sections/_header.scss
+++ b/src/assets/sass/sections/_header.scss
@@ -75,7 +75,8 @@ header {
   p {
     font-family: $font-code;
     color: #f2f2f2;
-    padding: 0 1rem;
+    padding: 0 .75rem;
+    @include font-size($p-font-sizes);
   }
   p:nth-of-type(1) {
     color: color(accent);
